fix tags overflow

--- a/src/components/client/Markdown/components/Table/Table.module.css
+++ b/src/components/client/Markdown/components/Table/Table.module.css
@@ -1,6 +1,6 @@
 /* table */
 .table {
-  @apply my-4 text-lg text-gray-700 border-collapse;
+  @apply text-lg text-gray-700;
 }
 
 .table :is(td, th) {
